--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <p> Lets Build a even Greater Site! </p>
+    <p> Testing Commits </p>
 
     <script type="text/javascript" src="interactions.js"></script>    <!-- Insert JQuery Script -->
 
