working in progress

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Give Me a Title!</title>                           <!-- Give Title -->
+    <title>Eric Oh</title>                           <!-- Give Title -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css">  <!-- Insert StyleSheet -->
     <link rel="icon" href="cool-icon.png">                    <!-- Insert Icon -->
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <p> Testing Commits again</p>
+    <p>A work in progress</p>
 
     <script type="text/javascript" src="interactions.js"></script>    <!-- Insert JQuery Script -->
 
