--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <p>A work in progress</p>
-    <img me="pictures/CFASitting">
+    <img src="pictures/CFASitting>.JPG">
     <script type="text/javascript" src="interactions.js"></script>    <!-- Insert JQuery Script -->
 
 </body>
