actually fixed picture

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 </head>
 <body>
 
-    <p>A work in progress</p>
-    <img src="pictures/CFASitting>.JPG">
+    <p>Trying to make this work</p>
+    <img src="pictures/CFASitting.JPG">
     <script type="text/javascript" src="interactions.js"></script>    <!-- Insert JQuery Script -->
 
 </body>
