added stupid line to picture

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <p>Trying to make this work</p>
-    <img src="pictures/CFASitting.JPG">
+    <img src="pictures/CFASitting.JPG" />
     <script type="text/javascript" src="interactions.js"></script>    <!-- Insert JQuery Script -->
 
 </body>
