--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <p>Trying to make this work</p>
     <img src="pictures/CFASitting.JPG" />
+    <p> I'm Eric and I'm a recent graduate of Carnegie Mellon University.</p>
     <script type="text/javascript" src="interactions.js"></script>    <!-- Insert JQuery Script -->
 
 </body>
