--- a/index.html
+++ b/index.html
@@ -11,6 +11,59 @@
 </head>
 <body>
 	<style type="text/css">
+		
+		body {
+			margin: 0;
+		}
+
+		/* NAV BAR */
+
+		.nav-bar {
+			width: 100%;
+			height: 50px;
+			margin: 0;
+			background: black;
+
+			/* Toggle between static and sticky */
+
+			position: sticky;
+			top: 0;
+		}
+
+		.nav-bar > .element {
+			width: 19.5%;
+			line-height: 50px;
+			text-align: center;
+			color: white;
+			display: inline-block;
+			margin: 0;
+			font-family: Arial;
+			text-decoration: none;
+		}
+
+		.nav-bar > .element:hover { 
+  			text-decoration: underline;
+		}	
+
+
+		/* BODY */
+
+		.content {
+			width: 80%;
+			margin-left: 10%;
+		}
+
+	</style>
+
+    <div class=nav-bar>
+    	<a href='index.html' class=element> Home </a>
+    	<a href='index.html' class=element> Experience </a>
+    	<a href='index.html' class=element> References </a>
+    	<a href='index.html' class=element> Directory </a>
+    	<a href='index.html' class=element> Contact </a>
+    </div>
+
+	<style type="text/css">
 		#img {
 			width: 300px;
 			text-align: center;
@@ -33,12 +86,8 @@
     <div class=center_img>
         <img id=img src="pictures/CFASitting.JPG" />
     </div>
-    <p> Popcorn is Delicious! </p>
-    <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
-    <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
-    <p> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. </p>
-    <p> Why do you like popcorn? </p>
-    <input class=input_class type="text" name="input_field" placeholder="because it make's me happy...">
+    <p> Hi I'm Eric! </p>
+    <p> I was born and raised in San Diego, and recently graduated from Carnegie Mellon University. </p>
 </div>
     <script type="text/javascript" src="interactions.js"></script>    <!-- Insert JQuery Script -->
 
