tried new stuff

--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
 
     <div class=nav-bar>
     	<a href='index.html' class=element> Home </a>
-    	<a href='index.html' class=element> Experience </a>
-    	<a href='index.html' class=element> References </a>
-    	<a href='index.html' class=element> Directory </a>
+    	<a href='testpage.html' class=element> Testpage </a>
     	<a href='index.html' class=element> Contact </a>
     </div>
 
