--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <div class=nav-bar>
     	<a href='index.html' class=element> Home </a>
-    	<a href='testpage.html' class=element> Testpage </a>
+    	<a href='education.html' class=element> Education </a>
     	<a href='index.html' class=element> Contact </a>
     </div>
 
