added a socials page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
-	<style type="text/css">
+    <style type="text/css">
 		
 		body {
 			margin: 0;
@@ -31,7 +31,7 @@
 		}
 
 		.nav-bar > .element {
-			width: 19.5%;
+			width: 33%;
 			line-height: 50px;
 			text-align: center;
 			color: white;
@@ -58,7 +58,7 @@
     <div class=nav-bar>
     	<a href='index.html' class=element> Home </a>
     	<a href='education.html' class=element> Education </a>
-    	<a href='index.html' class=element> Contact </a>
+    	<a href='socials.html' class=element> Socials </a>
     </div>
 
 	<style type="text/css">
