--- a/socials.html
+++ b/socials.html
@@ -60,7 +60,7 @@
     	<a href='education.html' class=element> Education </a>
     	<a href='socials.html' class=element> Socials </a>
     </div>
-    <p> I'm done studying lol. </p>
+    <p> Follow me on social media </p>
 </div>
     <script type="text/javascript" src="interactions.js"></script>    <!-- Insert JQuery Script -->
 
