added some links to socials

--- a/socials.html
+++ b/socials.html
@@ -61,6 +61,9 @@
     	<a href='socials.html' class=element> Socials </a>
     </div>
     <p> Follow me on social media </p>
+    <p> <a href="https://beliapp.co/app/ohe">Beli</a>, an app where I rank all the yummy places I eat! </p>
+    <p> <a href="https://www.instagram.com/ohe3789/">Instagram</a>, to see the (not) cool stuff I do every once in a while! </p>
+    <p> <a href="https://www.linkedin.com/in/eric-h-oh/">Linkedin</a>, for professional reasons or something. </p>
 </div>
     <script type="text/javascript" src="interactions.js"></script>    <!-- Insert JQuery Script -->
 
