--- a/socials.html
+++ b/socials.html
@@ -64,6 +64,7 @@
     <p> <a href="https://beliapp.co/app/ohe">Beli</a>, an app where I rank all the yummy places I eat! </p>
     <p> <a href="https://www.instagram.com/ohe3789/">Instagram</a>, to see the (not) cool stuff I do every once in a while! </p>
     <p> <a href="https://www.linkedin.com/in/eric-h-oh/">Linkedin</a>, for professional reasons or something. </p>
+    <p> If you want to directly contact me send me an <a href="mailto:danielzkng0@gmail.com">email</a></p>
 </div>
     <script type="text/javascript" src="interactions.js"></script>    <!-- Insert JQuery Script -->
 
