--- a/eggz.html
+++ b/eggz.html
@@ -60,9 +60,9 @@
     	<a href='education.html' class=element> Education </a>
     	<a href='socials.html' class=element> Socials </a>
     </div>
-	<p> I'm done studying since I (barely) got my B.S. in Computer Science with an additional major in Mathematical Sciences.
-	</p>
-
+    <p> Glad you found my site! I told a few people this, but I will attempt to make my room look like Wightman's living room, which requires lots of photos.
+        Submit your favorite photos to this <a href="https://forms.gle/akCtwNeDYyfjU51y9">form</a>, bonus points if you submit multiple. </p>
+    <p> Please don't roast my site too much.</p>
 </div>
     <script type="text/javascript" src="interactions.js"></script>    <!-- Insert JQuery Script -->
 
