--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
     <div class=center_img>
         <img id=img src="pictures/CFASitting.JPG" />
     </div>
-    <p> Hi I'm Eric! </p>
-    <p> I was born and raised in San Diego, and recently graduated from Carnegie Mellon University. </p>
+    <p> Hi I'm Eric! And my website is in progress. </p>
 </div>
     <script type="text/javascript" src="interactions.js"></script>    <!-- Insert JQuery Script -->
 
